2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/TestProjectsChecks.cs: Moved serialization
	  engine to MonoDevelop.Core. Use new syntax for specifying attribute
	  scope.

2008-07-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomCompilationUnitTests.cs,
	  MonoDevelop.Projects/DomPersistenceTests.cs: Added some tests.

2008-06-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Worked on unit tests.

2008-06-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Added some dom
	  persistence tests.

2008-06-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Added dom persistence
	  unit tests.

2008-06-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionTests.cs,
	  MonoDevelop.Projects/MSBuildTests.cs,
	  MonoDevelop.Projects/MdsTests.cs,
	  MonoDevelop.Projects/TestProjectsChecks.cs: Track api changes.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionTests.cs: New tests for checking
	  solution configuration mappings.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/MSBuildTests.cs: Test fixes.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionTests.cs, Util.cs: Added new test.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/TestProjectsChecks.cs, UnitTests.mdp: Use full
	  names when creating package references.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionTests.cs,
	  MonoDevelop.Projects/WorkspaceTests.cs,
	  MonoDevelop.Projects/MSBuildTests.cs,
	  MonoDevelop.Projects/MdsTests.cs,
	  MonoDevelop.Projects/TestProjectsChecks.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so