@@ -25,7 +25,6 @@
     <File name="MonoDevelop.Projects/WorkspaceTests.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Projects/PackagingTests.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Projects/MakefileTests.cs" subtype="Code" buildaction="Compile" />
-    <File name="MonoDevelop.Projects/DomPersistenceTests.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Projects/DomCompilationUnitTests.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
@@ -40,6 +39,7 @@
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.Autotools" />
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.CSharpBinding" />
   </References>
+  <GtkDesignInfo gtkVersion="2.12.1" />
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="Makefile.am" BuildTargetName="" CleanTargetName="" ExecuteTargetName="test" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../..">
     <BuildFilesVar Sync="True" Name="FILES" />
     <DeployFilesVar />
