@@ -1,3 +1,8 @@
+2008-07-27  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Projects/DomPersistenceTests.cs: Removed persistence
+	  tests.
+
 2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Projects/TestProjectsChecks.cs: Moved serialization
